feat: add financial MCP server, transaction service enhancements, and infrastructure
- Add financial-mcp-server: Python MCP server with account/transaction tools,
  JWT auth, monitoring, circuit breaker, and full test suite
- Enhance transaction-service: idempotency, processing state, Redis caching,
  resilient account client, monitoring aspects, and updated security config
- Enhance account-service: internal balance operations API, DB migrations,
  updated security, monitoring, and health configs
- Add infrastructure: Helm charts, Terraform configs (lock files only), K8s manifests
- Add checkpoint scripts: account-service-checkpoint-fixed.ps1,
  transaction-service-checkpoint.ps1 (both passing 100%)
- Add production scripts: start/stop/verify-production.ps1
- Update .gitignore: add Terraform, temp logs, CSV results, timestamped reports
- Remove junk: 49 temp/debug/report files cleaned from root
- Update CI/CD: pipeline and PR validation workflows