@@ -1,6 +1,6 @@
 package com.suhasan.finance.transaction_service.service;
 
-import com.suhasan.finance.transaction_service.client.AccountServiceClient;
+import com.suhasan.finance.transaction_service.client.ResilientAccountServiceClient;
 import com.suhasan.finance.transaction_service.dto.TransactionFilterRequest;
 import com.suhasan.finance.transaction_service.dto.TransactionResponse;
 import com.suhasan.finance.transaction_service.dto.TransactionStatsResponse;
@@ -21,20 +21,30 @@ import org.springframework.data.domain.Pageable;
 
 import java.math.BigDecimal;
 import java.time.LocalDateTime;
-import java.util.Collections;
+import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.mockito.ArgumentMatchers.*;
+import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.when;
 
 @ExtendWith(MockitoExtension.class)
+@SuppressWarnings("null")
 class TransactionHistoryServiceTest {
 
     @Mock
     private TransactionRepository transactionRepository;
 
     @Mock
-    private AccountServiceClient accountServiceClient;
+    private ResilientAccountServiceClient accountServiceClient;
+
+    @Mock
+    private AuditService auditService;
+
+    @Mock
+    private MetricsService metricsService;
+
+    @Mock
+    private TransactionLimitService transactionLimitService;
 
     @InjectMocks
     private TransactionServiceImpl transactionService;
@@ -62,169 +72,146 @@ class TransactionHistoryServiceTest {
 
     @Test
     void testSearchTransactions() {
-        // Given
         TransactionFilterRequest filter = TransactionFilterRequest.builder()
                 .accountId("account-1")
                 .type(TransactionType.TRANSFER)
                 .status(TransactionStatus.COMPLETED)
                 .minAmount(BigDecimal.valueOf(50.00))
                 .maxAmount(BigDecimal.valueOf(500.00))
+                .createdBy("test-user")
                 .build();
 
-        Page<Transaction> mockPage = new PageImpl<>(Collections.singletonList(sampleTransaction));
-        when(transactionRepository.findTransactionsWithFilters(
-                eq("account-1"),
-                eq(TransactionType.TRANSFER),
-                eq(TransactionStatus.COMPLETED),
-                any(),
-                any(),
-                eq(BigDecimal.valueOf(50.00)),
-                eq(BigDecimal.valueOf(500.00)),
-                any(),
-                any(),
-                eq(pageable)
-        )).thenReturn(mockPage);
+        Page<Transaction> scoped = new PageImpl<>(List.of(sampleTransaction));
+        when(transactionRepository.findByCreatedByOrderByCreatedAtDesc(eq("test-user"), eq(Pageable.unpaged())))
+                .thenReturn(scoped);
 
-        // When
         Page<TransactionResponse> result = transactionService.searchTransactions(filter, pageable);
 
-        // Then
         assertThat(result).isNotNull();
         assertThat(result.getContent()).hasSize(1);
         assertThat(result.getContent().get(0).getTransactionId()).isEqualTo("tx-123");
-        assertThat(result.getContent().get(0).getAmount()).isEqualTo(BigDecimal.valueOf(100.00));
+        assertThat(result.getContent().get(0).getAmount()).isEqualByComparingTo(BigDecimal.valueOf(100.00));
     }
 
     @Test
     void testGetAccountTransactionStats() {
-        // Given
         String accountId = "account-1";
         LocalDateTime startDate = LocalDateTime.now().minusDays(30);
-        LocalDateTime endDate = LocalDateTime.now();
+        LocalDateTime endDate = LocalDateTime.now().plusDays(1);
 
-        // Mock repository calls
-        when(transactionRepository.countTransactionsByAccountAndDateRange(eq(accountId), any(), any()))
-                .thenReturn(10L);
-        when(transactionRepository.countTransactionsByAccountStatusAndDateRange(eq(accountId), eq(TransactionStatus.COMPLETED), any(), any()))
-                .thenReturn(8L);
-        when(transactionRepository.countTransactionsByAccountStatusAndDateRange(eq(accountId), eq(TransactionStatus.PROCESSING), any(), any()))
-                .thenReturn(1L);
-        when(transactionRepository.countTransactionsByAccountStatusAndDateRange(eq(accountId), eq(TransactionStatus.FAILED), any(), any()))
-                .thenReturn(1L);
-        when(transactionRepository.countTransactionsByAccountStatusAndDateRange(eq(accountId), eq(TransactionStatus.REVERSED), any(), any()))
-                .thenReturn(0L);
-        
-        when(transactionRepository.sumTransactionAmountsByAccountAndDateRange(eq(accountId), any(), any()))
-                .thenReturn(BigDecimal.valueOf(5000.00));
-        when(transactionRepository.sumIncomingTransactionsByAccountAndDateRange(eq(accountId), any(), any()))
-                .thenReturn(BigDecimal.valueOf(3000.00));
-        when(transactionRepository.sumOutgoingTransactionsByAccountAndDateRange(eq(accountId), any(), any()))
-                .thenReturn(BigDecimal.valueOf(2000.00));
-        
-        when(transactionRepository.sumTransactionAmountsByAccountTypeAndDateRange(eq(accountId), eq(TransactionType.DEPOSIT), any(), any()))
-                .thenReturn(BigDecimal.valueOf(2000.00));
-        when(transactionRepository.sumTransactionAmountsByAccountTypeAndDateRange(eq(accountId), eq(TransactionType.WITHDRAWAL), any(), any()))
-                .thenReturn(BigDecimal.valueOf(1000.00));
-        when(transactionRepository.sumTransactionAmountsByAccountTypeAndDateRange(eq(accountId), eq(TransactionType.TRANSFER), any(), any()))
-                .thenReturn(BigDecimal.valueOf(2000.00));
-        
-        when(transactionRepository.countTransactionsByAccountTypeAndDateRange(eq(accountId), eq(TransactionType.DEPOSIT), any(), any()))
-                .thenReturn(3L);
-        when(transactionRepository.countTransactionsByAccountTypeAndDateRange(eq(accountId), eq(TransactionType.WITHDRAWAL), any(), any()))
-                .thenReturn(2L);
-        when(transactionRepository.countTransactionsByAccountTypeAndDateRange(eq(accountId), eq(TransactionType.TRANSFER), any(), any()))
-                .thenReturn(5L);
-        
-        when(transactionRepository.findMaxTransactionAmount(eq(accountId), any(), any()))
-                .thenReturn(BigDecimal.valueOf(1000.00));
-        when(transactionRepository.findMinTransactionAmount(eq(accountId), any(), any()))
-                .thenReturn(BigDecimal.valueOf(50.00));
-        
-        when(transactionRepository.getDailyTransactionSum(eq(accountId), eq(TransactionType.TRANSFER)))
-                .thenReturn(BigDecimal.valueOf(500.00));
-        when(transactionRepository.getMonthlyTransactionSum(eq(accountId), eq(TransactionType.TRANSFER)))
-                .thenReturn(BigDecimal.valueOf(2000.00));
-        when(transactionRepository.getDailyTransactionCount(eq(accountId), eq(TransactionType.TRANSFER)))
-                .thenReturn(2L);
-        when(transactionRepository.getMonthlyTransactionCount(eq(accountId), eq(TransactionType.TRANSFER)))
-                .thenReturn(5L);
+        Transaction completedTransfer = Transaction.builder()
+                .transactionId("t1")
+                .fromAccountId("account-1")
+                .toAccountId("account-2")
+                .amount(BigDecimal.valueOf(100.00))
+                .currency("USD")
+                .type(TransactionType.TRANSFER)
+                .status(TransactionStatus.COMPLETED)
+                .createdAt(LocalDateTime.now().minusDays(1))
+                .createdBy("test-user")
+                .build();
 
-        // When
+        Transaction completedDeposit = Transaction.builder()
+                .transactionId("t2")
+                .fromAccountId("EXTERNAL")
+                .toAccountId("account-1")
+                .amount(BigDecimal.valueOf(40.00))
+                .currency("USD")
+                .type(TransactionType.DEPOSIT)
+                .status(TransactionStatus.COMPLETED)
+                .createdAt(LocalDateTime.now().minusDays(1))
+                .createdBy("test-user")
+                .build();
+
+        Transaction processingTransfer = Transaction.builder()
+                .transactionId("t3")
+                .fromAccountId("account-1")
+                .toAccountId("account-3")
+                .amount(BigDecimal.valueOf(20.00))
+                .currency("USD")
+                .type(TransactionType.TRANSFER)
+                .status(TransactionStatus.PROCESSING)
+                .createdAt(LocalDateTime.now().minusHours(2))
+                .createdBy("test-user")
+                .build();
+
+        Transaction failedWithdrawal = Transaction.builder()
+                .transactionId("t4")
+                .fromAccountId("account-1")
+                .toAccountId("EXTERNAL")
+                .amount(BigDecimal.valueOf(30.00))
+                .currency("USD")
+                .type(TransactionType.WITHDRAWAL)
+                .status(TransactionStatus.FAILED)
+                .createdAt(LocalDateTime.now().minusHours(1))
+                .createdBy("test-user")
+                .build();
+
+        Transaction reversedTransfer = Transaction.builder()
+                .transactionId("t5")
+                .fromAccountId("account-1")
+                .toAccountId("account-4")
+                .amount(BigDecimal.valueOf(10.00))
+                .currency("USD")
+                .type(TransactionType.TRANSFER)
+                .status(TransactionStatus.REVERSED)
+                .createdAt(LocalDateTime.now().minusMinutes(30))
+                .createdBy("test-user")
+                .build();
+
+        when(transactionRepository.findByFromAccountIdOrToAccountIdOrderByCreatedAtDesc(
+                eq(accountId), eq(accountId), eq(Pageable.unpaged())))
+                .thenReturn(new PageImpl<>(List.of(
+                        completedTransfer,
+                        completedDeposit,
+                        processingTransfer,
+                        failedWithdrawal,
+                        reversedTransfer
+                )));
+
         TransactionStatsResponse result = transactionService.getAccountTransactionStats(accountId, startDate, endDate);
 
-        // Then
         assertThat(result).isNotNull();
         assertThat(result.getAccountId()).isEqualTo(accountId);
-        assertThat(result.getTotalTransactions()).isEqualTo(10L);
-        assertThat(result.getCompletedTransactions()).isEqualTo(8L);
+        assertThat(result.getTotalTransactions()).isEqualTo(5L);
+        assertThat(result.getCompletedTransactions()).isEqualTo(2L);
         assertThat(result.getPendingTransactions()).isEqualTo(1L);
         assertThat(result.getFailedTransactions()).isEqualTo(1L);
-        assertThat(result.getReversedTransactions()).isEqualTo(0L);
-        assertThat(result.getTotalAmount()).isEqualTo(BigDecimal.valueOf(5000.00));
-        assertThat(result.getTotalIncoming()).isEqualTo(BigDecimal.valueOf(3000.00));
-        assertThat(result.getTotalOutgoing()).isEqualTo(BigDecimal.valueOf(2000.00));
-        assertThat(result.getSuccessRate()).isEqualTo(80.0);
-        assertThat(result.getCurrency()).isEqualTo("USD");
-        assertThat(result.getLargestTransaction()).isEqualTo(BigDecimal.valueOf(1000.00));
-        assertThat(result.getSmallestTransaction()).isEqualTo(BigDecimal.valueOf(50.00));
-        assertThat(result.getDailyTotal()).isEqualTo(BigDecimal.valueOf(500.00));
-        assertThat(result.getMonthlyTotal()).isEqualTo(BigDecimal.valueOf(2000.00));
-        assertThat(result.getDailyCount()).isEqualTo(2L);
-        assertThat(result.getMonthlyCount()).isEqualTo(5L);
-        
-        // Check transaction counts by type
-        assertThat(result.getTransactionCountsByType().get("DEPOSIT")).isEqualTo(3L);
-        assertThat(result.getTransactionCountsByType().get("WITHDRAWAL")).isEqualTo(2L);
-        assertThat(result.getTransactionCountsByType().get("TRANSFER")).isEqualTo(5L);
-        
-        // Check transaction amounts by type
-        assertThat(result.getTransactionAmountsByType().get("DEPOSIT")).isEqualTo(BigDecimal.valueOf(2000.00));
-        assertThat(result.getTransactionAmountsByType().get("WITHDRAWAL")).isEqualTo(BigDecimal.valueOf(1000.00));
-        assertThat(result.getTransactionAmountsByType().get("TRANSFER")).isEqualTo(BigDecimal.valueOf(2000.00));
+        assertThat(result.getReversedTransactions()).isEqualTo(1L);
+        assertThat(result.getTotalAmount()).isEqualByComparingTo(BigDecimal.valueOf(140.00));
+        assertThat(result.getTotalIncoming()).isEqualByComparingTo(BigDecimal.valueOf(40.00));
+        assertThat(result.getTotalOutgoing()).isEqualByComparingTo(BigDecimal.valueOf(100.00));
+        assertThat(result.getLargestTransaction()).isEqualByComparingTo(BigDecimal.valueOf(100.00));
+        assertThat(result.getSmallestTransaction()).isEqualByComparingTo(BigDecimal.valueOf(40.00));
+        assertThat(result.getSuccessRate()).isEqualTo(40.0);
     }
 
     @Test
     void testGetAccountTransactionStatsWithDefaultDateRange() {
-        // Given
         String accountId = "account-1";
-        
-        // Mock basic repository calls
-        when(transactionRepository.countTransactionsByAccountAndDateRange(eq(accountId), any(), any()))
-                .thenReturn(5L);
-        when(transactionRepository.countTransactionsByAccountStatusAndDateRange(eq(accountId), any(), any(), any()))
-                .thenReturn(0L);
-        when(transactionRepository.sumTransactionAmountsByAccountAndDateRange(eq(accountId), any(), any()))
-                .thenReturn(BigDecimal.valueOf(1000.00));
-        when(transactionRepository.sumIncomingTransactionsByAccountAndDateRange(eq(accountId), any(), any()))
-                .thenReturn(BigDecimal.valueOf(600.00));
-        when(transactionRepository.sumOutgoingTransactionsByAccountAndDateRange(eq(accountId), any(), any()))
-                .thenReturn(BigDecimal.valueOf(400.00));
-        when(transactionRepository.sumTransactionAmountsByAccountTypeAndDateRange(eq(accountId), any(), any(), any()))
-                .thenReturn(BigDecimal.ZERO);
-        when(transactionRepository.countTransactionsByAccountTypeAndDateRange(eq(accountId), any(), any(), any()))
-                .thenReturn(0L);
-        when(transactionRepository.findMaxTransactionAmount(eq(accountId), any(), any()))
-                .thenReturn(BigDecimal.valueOf(500.00));
-        when(transactionRepository.findMinTransactionAmount(eq(accountId), any(), any()))
-                .thenReturn(BigDecimal.valueOf(100.00));
-        when(transactionRepository.getDailyTransactionSum(eq(accountId), any()))
-                .thenReturn(BigDecimal.valueOf(200.00));
-        when(transactionRepository.getMonthlyTransactionSum(eq(accountId), any()))
-                .thenReturn(BigDecimal.valueOf(1000.00));
-        when(transactionRepository.getDailyTransactionCount(eq(accountId), any()))
-                .thenReturn(1L);
-        when(transactionRepository.getMonthlyTransactionCount(eq(accountId), any()))
-                .thenReturn(5L);
+        Transaction tx = Transaction.builder()
+                .transactionId("t-default")
+                .fromAccountId("account-1")
+                .toAccountId("account-2")
+                .amount(BigDecimal.valueOf(250.00))
+                .currency("USD")
+                .type(TransactionType.TRANSFER)
+                .status(TransactionStatus.COMPLETED)
+                .createdAt(LocalDateTime.now().minusDays(1))
+                .createdBy("test-user")
+                .build();
 
-        // When (passing null dates to test default behavior)
+        when(transactionRepository.findByFromAccountIdOrToAccountIdOrderByCreatedAtDesc(
+                eq(accountId), eq(accountId), eq(Pageable.unpaged())))
+                .thenReturn(new PageImpl<>(List.of(tx)));
+
         TransactionStatsResponse result = transactionService.getAccountTransactionStats(accountId, null, null);
 
-        // Then
         assertThat(result).isNotNull();
         assertThat(result.getAccountId()).isEqualTo(accountId);
         assertThat(result.getPeriodStart()).isNotNull();
         assertThat(result.getPeriodEnd()).isNotNull();
-        assertThat(result.getTotalTransactions()).isEqualTo(5L);
-        assertThat(result.getTotalAmount()).isEqualTo(BigDecimal.valueOf(1000.00));
+        assertThat(result.getTotalTransactions()).isEqualTo(1L);
+        assertThat(result.getTotalAmount()).isEqualByComparingTo(BigDecimal.valueOf(250.00));
     }
 }
